fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,9 +456,9 @@ br {
   line-height: 1.6em;
 }
 
-#portfolio div {
+/* #portfolio div {
     margin: 3%;
-}
+} */
 
 #aikido {
     background-image: url("http://aikidoderby.co.uk/images/image1.png");
